Prevent flickering when "Show spoilers on hover" is enabled

--- a/source/features/hide-spoilers.scss
+++ b/source/features/hide-spoilers.scss
@@ -16,7 +16,7 @@ $tr: .15s ease .1s;
     cursor: default;
 
     img[srcset] {
-      transform: rotate(.001deg);
+      backface-visibility: hidden;
       transition: filter $tr, transform $tr;
     }
 
